--- a/4-Gewinnt Etappe 5/app/src/main/res/layout/activity_main.xml
+++ b/4-Gewinnt Etappe 5/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,9 @@
         android:layout_weight="1"
         android:gravity="bottom"
         android:orientation="vertical"
-        android:weightSum="6" />
+        android:weightSum="6" >
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
